# Demo3D

./: CMakeLists.txt  Demo3dProject.qmlproject  Demo3dProject.qmlproject.qtds  qmlmodules
asset_imports/Quick3DAssets/Scene/: Scene.qml  _importdata.json
asset_imports/Quick3DAssets/Scene/_icons/: Scene_libicon  Scene_libicon@2x
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/Demo3dProject/: CMakeLists.txt  qmldir
imports/Demo3dProject/designer/: plugin.metainfo
src/: import_qml_plugins.h
